--- a/thesis/source/refs.bib
+++ b/thesis/source/refs.bib
@@ -18,8 +18,8 @@ jupyter:ifaq,
 jupyter:hub,
     author = {Project Jupyter},
     title = {JupyterHub},
-    howpublished = {https://jupyterhub.readthedocs.io/en/stable/},
-    note = {value},
+    howpublished = {https://web.archive.org/web/20211115163603/https://jupyterhub.readthedocs.io/en/stable/},
+    note = {Accessed: 2021-11-16},
 }
 
 @misc{
