--- a/thesis/source/refs.bib
+++ b/thesis/source/refs.bib
@@ -23,10 +23,35 @@ jupyter:hub,
 }
 
 @misc{
+jupyter:kernels,
+    author = {Project Jupyter},
+    title = {Jupyter kernels},
+    howpublished = {https://web.archive.org/web/20211118154819/https://github.com/jupyter/jupyter/wiki/Jupyter-kernels},
+    note = {Accessed: 2021-11-18},
+}
+
+@misc{
+jupyter:collaboration,
+    author = {Project Jupyter},
+    title = {Real Time Collaboration},
+    howpublished = {https://web.archive.org/web/20211118174617/https://jupyterlab.readthedocs.io/en/stable/user/rtc.html},
+    note = {Accessed: 2021-11-18},
+}
+
+
+@misc{
 enwiki:993314047,
-    author = {Wikipedia},
-    title = {Electronic lab notebook --- {Wikipedia}{,} The Free Encyclopedia},
+    author = {English Wikipedia},
+    title = {Electronic lab notebook},
     year = {2020},
     howpublished = {https://en.wikipedia.org/w/index.php?title=Electronic_lab_notebook&oldid=993314047},
-    note = {Accessed 2021-11-15},
+    note = {Accessed: 2021-11-15},
+}
+
+@misc{
+overleaf:learn30mins,
+    author = {Overleaf},
+    title = {Learn LaTeX in 30 minutes},
+    howpublished = {https://web.archive.org/web/20211116220924/https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes},
+    note = {Accessed: 2021-11-16},
 }
