🎓 Looks like a good point to save

--- a/thesis/source/refs.bib
+++ b/thesis/source/refs.bib
@@ -55,3 +55,11 @@ overleaf:learn30mins,
     howpublished = {https://web.archive.org/web/20211116220924/https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes},
     note = {Accessed: 2021-11-16},
 }
+
+@misc{
+so:survey2021,
+    author = {Stack Overflow},
+    title = {2021 Developer Survey},
+    howpublished = {https://insights.stackoverflow.com/survey/2021},
+    note = {Accessed: 2021-11-20},
+}
