🎓 Add containerization things

--- a/thesis/source/refs.bib
+++ b/thesis/source/refs.bib
@@ -38,7 +38,6 @@ jupyter:collaboration,
     note = {Accessed: 2021-11-18},
 }
 
-
 @misc{
 enwiki:993314047,
     author = {English Wikipedia},
@@ -62,4 +61,28 @@ so:survey2021,
     title = {2021 Developer Survey},
     howpublished = {https://insights.stackoverflow.com/survey/2021},
     note = {Accessed: 2021-11-20},
+}
+
+@misc{
+docker:overview,
+    author = {Docker},
+    title = {Overview},
+    howpublished = {https://web.archive.org/web/20211121165850/https://docs.docker.com/get-started/overview/},
+    note = {Accessed: 2021-11-21},
+}
+
+@misc{
+docker:networking,
+    author = {Docker},
+    title = {Networking overview},
+    howpublished = {https://web.archive.org/web/20211111155419/https://docs.docker.com/network/},
+    note = {Accessed: 2021-11-21},
+}
+
+@misc{
+docker:volumes,
+    author = {Docker},
+    title = {Use volumes},
+    howpublished = {https://web.archive.org/web/20211121172749/https://docs.docker.com/storage/volumes/},
+    note = {Accessed: 2021-11-21},
 }
