🎓 Review and improve all chapters so far

--- a/thesis/source/refs.bib
+++ b/thesis/source/refs.bib
@@ -86,3 +86,11 @@ docker:volumes,
     howpublished = {https://web.archive.org/web/20211121172749/https://docs.docker.com/storage/volumes/},
     note = {Accessed: 2021-11-21},
 }
+
+@misc{
+github:features,
+    author = {GitHub},
+    title = {Features},
+    howpublished = {https://web.archive.org/web/20211124034005/https://github.com/features},
+    note = {Accessed: 2021-11-24},
+}
